# comp_graf_laba1

./: CMakeLists.txt  Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  RayTracer.cpp  basic_scene.ppm  main.cpp
Project1/: Geometry.cpp  Geometry.h  Material.cpp  Material.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  RayTracer.cpp  RayTracer.h  basic_scene.ppm  main.cpp
